--- a/contacts_api/pyproject.toml
+++ b/contacts_api/pyproject.toml
@@ -26,6 +26,10 @@ fastapi-mail = "^1.5.0"
 pydantic-settings = "^2.2"
 fastapi-limiter = "^0.1.6"
 redis = "^6.2.0"
+sphinx = "^8.2.3"
+
+[tool.poetry.group.dev.dependencies]
+sphinx = "^8.2.3"
 
 [build-system]
 requires = ["poetry-core>=2.0.0"]
